--- a/ML_Formula1_IFSP.ipynb
+++ b/ML_Formula1_IFSP.ipynb
@@ -2,45 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".dashed-box {\n",
-       "    border: 1px dashed black !important;\n",
-       "#    font-size: var(--jp-content-font-size1) !important;\n",
-       "}\n",
-       "\n",
-       ".dashed-box table {\n",
-       "\n",
-       "}\n",
-       "\n",
-       ".dashed-box tr {\n",
-       "    background-color: white !important;\n",
-       "}\n",
-       "        \n",
-       ".alt-tab {\n",
-       "    background-color: black;\n",
-       "    color: #ffc351;\n",
-       "    padding: 4px;\n",
-       "    font-size: 1em;\n",
-       "    font-weight: bold;\n",
-       "    font-family: monospace;\n",
-       "}\n",
-       "// add your CSS styling here\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -66,8 +29,11 @@
     "    font-family: monospace;\n",
     "}\n",
     "// add your CSS styling here\n",
-    "</style>\n"
-   ]
+    "</style>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
